Various bug fixes before jumping into proper config setup for spinner

--- a/client/src/components/LeafSpinner.scss
+++ b/client/src/components/LeafSpinner.scss
@@ -1,7 +1,6 @@
 @import "../common_css/common-variables";
 
-.faded-loading-container {
-  position: fixed;
+.faded-loading-container--true {
   left: 0;
   width: 100%;
   height: 100%;
